Added hcards and minor fixes for index and style

--- a/lab3/index.html
+++ b/lab3/index.html
@@ -41,7 +41,8 @@
 
       <div id="example3">
         <img src="images/region.png" alt="Mock Up" style="height: 30%; margin-top: 20%; margin-bottom: 10%;">
-        <h3>Region, find peers who share your interests.</h3>
+        <h1>Region</h1>
+        <h3>Find peers who share your interests.</h3>
         <p>A Social Media Web Application</p>
       </div>
 
