--- a/lab3/resumes/qinz.html
+++ b/lab3/resumes/qinz.html
@@ -9,22 +9,25 @@
 </head>
 
 <body>
-  <h1 class="name">
-    Zehao Qin
-  </h1>
-  <ul class="list-group list-group-horizontal justify-content-left">
-    <li class="list-group-item">
-      172 Pawling Ave. Troy, NY 12180
-    </li>
-    <li class="list-group-item">
-      <a href="qinnkkyle@gmail.com">qinnkkyle@gmail.com</a>
-    </li>
-    <li class="list-group-item">
-      (838) 200 - 3104
-    </li>
-  </ul>
-  <img src="../images/Kyle.jpg" alt="Profile Photo" class="profilePhoto">
+  <div id="hcard-Zehao-Qin" class="hcard">
+    <img src="../images/Kyle.jpg" alt="Profile Photo" class="photo">
+    <h1 class="fn">Kyle Qin</h1>
+    <div class="org">Content Creators</div>
+    <a class="email" href="mailto:qinnkkyle@gmail.com">qinnkkyle@gmail.com</a>
 
+    <div class="adr">
+     <div class="street-address">284 Pawling Ave.</div>
+     <span class="locality">Troy</span>
+      , 
+     <span class="region">New York</span>
+      , 
+     <span class="postal-code">12180</span>
+      ,
+     <span class="country-name">United States</span>
+   
+    </div>
+    <div class="tel">(838) 200 - 3104</div>
+  </div>
   <div class="Summary">
 
     <h2>
