--- a/lab3/resumes/samuet.html
+++ b/lab3/resumes/samuet.html
@@ -9,21 +9,25 @@
 </head>
 
 <body>
-    <h1 class="name">
-        Tyler Samuels
-    </h1>
-    <ul class="list-group list-group-horizontal justify-content-left">
-        <li class="list-group-item">
-            205 Sudbrook Ln. Pikesville MD, 21208
-        </li>
-        <li class="list-group-item">
-            <a href="mailto:tjs1036@gmail.com">tjs1036@gmail.com</a>
-        </li>
-        <li class="list-group-item">
-            (443) 608 - 4907
-        </li>
-    </ul>
-    <img src=" ../images/Tyler.jpg" alt="Profile Photo" class="profilePhoto">
+    <div id="hcard-Tyler-Samuels" class="hcard">
+        <img src="../images/Tyler.jpg" alt="Profile Photo" class="photo">
+        <h1 class="fn">Tyler Samuels</h1>
+        <div class="org">Content Creators</div>
+        <a class="email" href="mailto:tjs1036@gmail.com">tjs1036@gmail.com</a>
+    
+        <div class="adr">
+         <div class="street-address">205 Sudbrook Ln.</div>
+         <span class="locality">Pikesville</span>
+          , 
+         <span class="region">Maryland</span>
+          , 
+         <span class="postal-code">21208</span>
+          ,
+         <span class="country-name">United States</span>
+       
+        </div>
+        <div class="tel">(443) 608 - 4907</div>
+    </div>
 
     <div class="Summary">
 
