--- a/lab3/index.html
+++ b/lab3/index.html
@@ -59,10 +59,12 @@
     <div class="profiles">
 
       <div id="profile1">
-        <a href="#">
-          <img src="images/questionMark.png" alt="Mock Up">
+        <a href="resumes/lid.html">
+          <img src="images/Derek.jpeg" alt="Mock Up">
           <h3>Derek Li</h3>
-          <p>include a description and one tiny mock-up for each previous work</p>
+          <p>Software Engineer</p>
+          <p>Mobile Developer</p>
+          <p>Web Developer</p>
         </a>
       </div>
 
