Converted all the contact cards in the resumes to hCards

--- a/lab3/resumes/barnev.html
+++ b/lab3/resumes/barnev.html
@@ -9,22 +9,27 @@
 </head>
 
 <body>
-    <h1 class="name">
-        Virginia Barnes
-    </h1>
-    <ul class="list-group list-group-horizontal justify-content-left">
-        <li class="list-group-item">
-            24 Pleasant Street, Tewksbury, MA 01876
-        </li>
-        <li class="list-group-item">
-            <a href="mailto:virginiabarnes0825@gmail.com">virginiabarnes0825@gmail.com</a>
-        </li>
-        <li class="list-group-item">
-            (978) 973 - 5880
-        </li>
-    </ul>
-    <img src=" ../images/Virginia.jpg" alt="Profile Photo" class="profilePhoto">
+    <ul class="list-group list-group-horizontal justify-content-left"></ul>
+    <div id="hcard-Virginia-Barnes" class="hcard">
+        <img src="../images/Virginia.jpg" alt="Profile Photo" class="photo">
+        <h1 class="fn">Virginia Barnes</h1>
+        <div class="org">Content Creators</div>
+        <a class="email" href="mailto:virginiabarnes0825@gmail.com">virginiabarnes0825@gmail.com</a>
 
+        <div class="adr">
+         <div class="street-address">24 Pleasant Street</div>
+         <span class="locality">Tewksbury</span>
+          , 
+         <span class="region">Massachusetts</span>
+          , 
+         <span class="postal-code">01876</span>
+          ,
+         <span class="country-name">United States</span>
+       
+        </div>
+        <div class="tel">(978) 973 - 5880</div>
+      </div>
+    </ul>
     <div class="Summary">
 
         <h2>
