--- a/lab3/resumes/lid.html
+++ b/lab3/resumes/lid.html
@@ -9,22 +9,27 @@
 </head>
 
 <body>
-    <h1 class="name">
-        Derek Li
-    </h1>
-    <ul class="list-group list-group-horizontal justify-content-left">
-        <li class="list-group-item">
-            13802 SW 39th St Davie, FL
-        </li>
-        <li class="list-group-item">
-            <a href="mailto:derekli2011@gmail.com">derekli2011@gmail.com</a>
-        </li>
-        <li class="list-group-item">
-            (954) 864 - 1487
-        </li>
-    </ul>
-    <img src=" ../images/Derek.jpeg" alt="Profile Photo" class="profilePhoto">
+    <ul class="list-group list-group-horizontal justify-content-left"></ul>
+    <div id="hcard-Derek-Li" class="hcard">
+        <img src="../images/Derek.jpeg" alt="Profile Photo" class="photo">
+        <h1 class="fn">Derek Li</h1>
+        <div class="org">Content Creators</div>
+        <a class="email" href="mailto:derekli2011@gmail.com">derekli2011@gmail.com</a>
 
+        <div class="adr">
+         <div class="street-address">13802 SW 39th ST</div>
+         <span class="locality">Davie</span>
+          , 
+         <span class="region">Florida</span>
+          , 
+         <span class="postal-code">33330</span>
+          ,
+         <span class="country-name">United States</span>
+       
+        </div>
+        <div class="tel">(954) 864 - 1487</div>
+      </div>
+    </ul>
     <div class="Summary">
 
         <h2>
