--- a/lab3/resumes/wildg.html
+++ b/lab3/resumes/wildg.html
@@ -9,22 +9,28 @@
 </head>
 
 <body>
-    <h1 class="name">
-        Gabriel Wild
-    </h1>
-    <ul class="list-group list-group-horizontal justify-content-left">
-        <li class="list-group-item">
-            2316 Ronda Vista Dr. Los Angeles CA, 90027
-        </li>
-        <li class="list-group-item">
-            <a href="mailto:gabewild37gmail.com">gabewild37@gmail.com</a>
-        </li>
-        <li class="list-group-item">
-            (323) 708 - 9229
-        </li>
-    </ul>
-    <img src=" ../images/wildg.jpg" alt="Profile Photo" class="profilePhoto">
+    <ul class="list-group list-group-horizontal justify-content-left"></ul>
+        <div id="hcard-Gabriel-Wild" class="hcard">
+            <img src="../images/wildg.jpg" alt="Profile Photo" class="photo">
+            <h1 class="fn">Gabriel Wild</h1>
+            <div class="org">Content Creators</div>
+            <a class="email" href="mailto:gabewild37@gmail.com">gabewild37@gmail.com</a>
 
+            <div class="adr">
+            <div class="street-address">2316 Ronda Vista Dr</div>
+            <span class="locality">Los Angeles</span>
+            , 
+            <span class="region">California</span>
+            , 
+            <span class="postal-code">90027</span>
+            ,
+            <span class="country-name">United States</span>
+        
+            </div>
+            <div class="tel">(323) 708 - 9229</div>
+        </div>
+    </ul>
+   
     <div class="Summary">
 
         <h2>
