Updated resumes, added new project

--- a/lab3/index.html
+++ b/lab3/index.html
@@ -29,14 +29,14 @@
 
       <div id="example1">
         <img src="images/questionMark.png" alt="Mock Up">
-        <h3>Previous Work 1.</h3>
-        <p>Include a description and one tiny mock-up for each previous work</p>
+        <h1>Open Tablet</h1>
+        <p>A drawing application that allows users to use any surface as a drawing tablet.</p>
       </div>
 
       <div id="example2">
-        <img src="images/questionMark.png" alt="Mock Up">
-        <h3>Previous Work 2.</h3>
-        <p>Include a description and one tiny mock-up for each previous work</p>
+        <img src="images/shuttle.png" alt="Mock Up"  style="height: 30%; margin-top: 20%; margin-bottom: 10%;">
+        <h1>Flutter ShuttleTracker</h1>
+        <p>Mobile RPI ShuttleTracker Application</p>
       </div>
 
       <div id="example3">
