--- a/lab3/resumes/lid.html
+++ b/lab3/resumes/lid.html
@@ -103,6 +103,19 @@
                         Web Systems Development - Fall 2020
                     </li>
                 </ul>
+                <h2>Accomplishments & Extracurriculars</h2>
+                    <ul>
+                    <li>
+                        Dean's List of Distinguished Students
+                    </li>
+                    <li>
+                        Chapter Secretary of CCMC
+                    </li>
+                    <li>
+                        Member of Table Tennis Club
+                    </li>
+                    </ul>
+                </h2>
             </div>
         </div>
     </div>
