--- a/lab3/resumes/qinz.html
+++ b/lab3/resumes/qinz.html
@@ -9,25 +9,28 @@
 </head>
 
 <body>
-  <div id="hcard-Zehao-Qin" class="hcard">
-    <img src="../images/Kyle.jpg" alt="Profile Photo" class="photo">
-    <h1 class="fn">Kyle Qin</h1>
-    <div class="org">Content Creators</div>
-    <a class="email" href="mailto:qinnkkyle@gmail.com">qinnkkyle@gmail.com</a>
+  <ul class="list-group list-group-horizontal justify-content-left"></ul>
 
-    <div class="adr">
-     <div class="street-address">284 Pawling Ave.</div>
-     <span class="locality">Troy</span>
+    <div id="hcard-Zehao-Qin" class="hcard">
+      <img src="../images/Kyle.jpg" alt="Profile Photo" class="photo">
+      <h1 class="fn">Kyle Qin</h1>
+      <div class="org">Content Creators</div>
+      <a class="email" href="mailto:qinnkkyle@gmail.com">qinnkkyle@gmail.com</a>
+
+      <div class="adr">
+      <div class="street-address">284 Pawling Ave.</div>
+      <span class="locality">Troy</span>
       , 
-     <span class="region">New York</span>
+      <span class="region">New York</span>
       , 
-     <span class="postal-code">12180</span>
-      ,
-     <span class="country-name">United States</span>
-   
+      <span class="postal-code">12180</span>
+      , 
+      <span class="country-name">United States</span>
+    
+      </div>
+      <div class="tel">(838) 200 - 3104</div>
     </div>
-    <div class="tel">(838) 200 - 3104</div>
-  </div>
+  </ul>
   <div class="Summary">
 
     <h2>
