--- a/lab3/index.html
+++ b/lab3/index.html
@@ -28,7 +28,7 @@
     <div class="examples">
 
       <div id="example1">
-        <img src="images/questionMark.png" alt="Mock Up">
+        <img src="images/openTabl.jpeg" alt="Mock Up" style="height: 30%; margin-top: 20%; margin-bottom: 10%;">
         <h1>Open Tablet</h1>
         <p>A drawing application that allows users to use any surface as a drawing tablet.</p>
       </div>
