removing now unnecessary bootstrap

--- a/lab3/resumes/lid.html
+++ b/lab3/resumes/lid.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-    <ul class="list-group list-group-horizontal justify-content-left"></ul>
     <div id="hcard-Derek-Li" class="hcard">
         <img src="../images/Derek.jpeg" alt="Profile Photo" class="photo">
         <h1 class="fn">Derek Li</h1>
@@ -17,27 +16,30 @@
         <a class="email" href="mailto:derekli2011@gmail.com">derekli2011@gmail.com</a>
 
         <div class="adr">
-         <div class="street-address">13802 SW 39th ST</div>
-         <span class="locality">Davie</span>
-          , 
-         <span class="region">Florida</span>
-          , 
-         <span class="postal-code">33330</span>
-          ,
-         <span class="country-name">United States</span>
-       
+            <div class="street-address">13802 SW 39th ST</div>
+            <span class="locality">Davie</span>
+            ,
+            <span class="region">Florida</span>
+            ,
+            <span class="postal-code">33330</span>
+            ,
+            <span class="country-name">United States</span>
+
         </div>
         <div class="tel">(954) 864 - 1487</div>
-      </div>
+    </div>
     </ul>
     <div class="Summary">
 
         <h2>
             Summary
         </h2>
-        <p>Third-year student at Rensselaer Polytechnic Institute studying Computer Science and Information Technology and Web Science. 
-            As a computer science student, I am driven to create meaningful applications using various programming languages and technologies. 
-            I've worked on different types of iOS app development projects, web application development projects, and open-source projects.
+        <p>Third-year student at Rensselaer Polytechnic Institute studying Computer Science and Information Technology
+            and Web Science.
+            As a computer science student, I am driven to create meaningful applications using various programming
+            languages and technologies.
+            I've worked on different types of iOS app development projects, web application development projects, and
+            open-source projects.
         </p>
     </div>
 
@@ -104,7 +106,7 @@
                     </li>
                 </ul>
                 <h2>Accomplishments & Extracurriculars</h2>
-                    <ul>
+                <ul>
                     <li>
                         Dean's List of Distinguished Students
                     </li>
@@ -114,7 +116,7 @@
                     <li>
                         Member of Table Tennis Club
                     </li>
-                    </ul>
+                </ul>
                 </h2>
             </div>
         </div>
@@ -176,10 +178,12 @@
                     Designed the architecture and flow of data between the front-end and the back-end applications.
                 </li>
                 <li>
-                    Created a custom API using Java and Google Cloud SQL to handle back-end functionality and data management.    
+                    Created a custom API using Java and Google Cloud SQL to handle back-end functionality and data
+                    management.
                 </li>
                 <li>
-                    Created an iOS application that tested the connectivity and speed of API GET and POST requests, which improved the responsiveness of the main management apps.
+                    Created an iOS application that tested the connectivity and speed of API GET and POST requests,
+                    which improved the responsiveness of the main management apps.
                 </li>
                 <li>
                     Founded and currently manage a start-up company.
@@ -198,20 +202,22 @@
             </h4>
             <ul>
                 <li>
-                    Created and integrated a web application using C# that provided clients with requested composited and downloaded videos.
+                    Created and integrated a web application using C# that provided clients with requested composited
+                    and downloaded videos.
                 </li>
                 <li>
                     Integrated Intuit accounting software using C# into the company database for invoice automation.
                 </li>
                 <li>
-                    Designed an interpretation system that allowed patients in MRI rooms to speak with doctors and interpreters, which resulted in a $1.5 million contract with Weill Cornell Medicine.                </li>
+                    Designed an interpretation system that allowed patients in MRI rooms to speak with doctors and
+                    interpreters, which resulted in a $1.5 million contract with Weill Cornell Medicine. </li>
                 <li>
                     Developed a custom wake-word engine using Tensorflow by utilizing machine learning concepts.
                 </li>
                 <li>
                     Designed and managed a mass recruiting email campaign using Java and Microsoft Excel.
                 </li>
-              </ul>
+            </ul>
         </div>
         <div class="experience-item">
             <h3>
@@ -225,30 +231,37 @@
             </h4>
             <ul>
                 <li>
-                    Manage a team of student developers that work on the RPI ShuttleTracker, a student-run web application that tracks shuttles on the RPI campus.
+                    Manage a team of student developers that work on the RPI ShuttleTracker, a student-run web
+                    application that tracks shuttles on the RPI campus.
                 </li>
                 <li>
                     Designed and created a cross-platform mobile application for ShuttleTracker using Flutter.
                 </li>
                 <li>
-                    Created the foundation for future WebSocket features that will be implemented into the mobile application.
+                    Created the foundation for future WebSocket features that will be implemented into the mobile
+                    application.
                 </li>
                 <li>
-                    Implemented WebSocket functionality within the mobile application to reliably and smoothly update shuttle positions and ETAs.
+                    Implemented WebSocket functionality within the mobile application to reliably and smoothly update
+                    shuttle positions and ETAs.
                 </li>
                 <li>
-                    Refactored the ETA calculation system for tracking active shuttles to increase code-readability and improve new members’ understanding of the system.
+                    Refactored the ETA calculation system for tracking active shuttles to increase code-readability and
+                    improve new members’ understanding of the system.
                 </li>
                 <li>
-                    Designed and implemented the ShuttleTracker website to include a dark theme and an updated settings page.
+                    Designed and implemented the ShuttleTracker website to include a dark theme and an updated settings
+                    page.
                 </li>
                 <li>
-                    Mentor and help students on the ShuttleTracker team with any technical issues as a Rensselaer Center for Open Source mentor.
+                    Mentor and help students on the ShuttleTracker team with any technical issues as a Rensselaer Center
+                    for Open Source mentor.
                 </li>
                 <li>
-                    Hold bonus sessions that teach students about the technologies used in ShuttleTracker, such as Flutter.
+                    Hold bonus sessions that teach students about the technologies used in ShuttleTracker, such as
+                    Flutter.
                 </li>
-              </ul>
+            </ul>
         </div>
     </div>
 
