added section and article tags in index

--- a/lab3/index.html
+++ b/lab3/index.html
@@ -12,10 +12,10 @@
 
   <div id="homepage">
 
-    <div class="header">
+    <section class="header">
       <h1>We are Content Creators.</h1>
       <p>Creating content for the web one application at a time.</p>
-    </div>
+    </section>
 
     <div class="topPhrase">
       <p>WORKS</p>
@@ -25,28 +25,28 @@
       <p>Portfolio</p>
     </div>
 
-    <div class="examples">
+    <section class="examples">
 
-      <div id="example1">
+      <article id="example1">
         <img src="images/openTabl.jpeg" alt="Mock Up" style="height: 30%; margin-top: 20%; margin-bottom: 10%;">
         <h1>Open Tablet</h1>
         <p>A drawing application that allows users to use any surface as a drawing tablet.</p>
-      </div>
+      </article>
 
-      <div id="example2">
+      <article id="example2">
         <img src="images/shuttle.png" alt="Mock Up"  style="height: 30%; margin-top: 20%; margin-bottom: 10%;">
         <h1>Flutter ShuttleTracker</h1>
         <p>Mobile RPI ShuttleTracker Application</p>
-      </div>
+      </article>
 
-      <div id="example3">
+      <article id="example3">
         <img src="images/region.png" alt="Mock Up" style="height: 30%; margin-top: 20%; margin-bottom: 10%;">
         <h1>Region</h1>
         <h3>Find peers who share your interests.</h3>
         <p>A Social Media Web Application</p>
-      </div>
+      </article>
 
-    </div>
+    </section>
 
     <div class="topPhrase">
       <p>TEAM</p>
@@ -56,7 +56,8 @@
       <p>Profiles</p>
     </div>
 
-    <div class="profiles">
+    <section class="profiles">
+      
       <div id="profile1">
         <a href="resumes/lid.html">
           <img src="images/Derek.jpeg" alt="Mock Up">
@@ -106,7 +107,7 @@
       </div>
 
       
-    </div>
+    </section>
   </div>
 
 </body>
