--- a/lab3/index.html
+++ b/lab3/index.html
@@ -93,7 +93,8 @@
         <a href="resumes/samuet.html">
           <img src="images/Tyler.jpg" alt="Mock Up">
           <h3>Tyler Samuels</h3>
-          <p>include a description and one tiny mock-up for each previous work</p>
+          <p>Software Engineer</p>
+          <p>Web Developer</p>
         </a>
       </div>
 
@@ -101,7 +102,9 @@
         <a href="resumes/barnev.html">
           <img src="images/Virginia.jpg" alt="Mock Up">
           <h3>Virginia Barnes</h3>
-          <p>include a description and one tiny mock-up for each previous work</p>
+          <p>Software Engineer</p>
+          <p>Web Developer</p>
+          <p>Project Management</p>
         </a>
       </div>
 
