--- a/lab3/resumes/samuet.html
+++ b/lab3/resumes/samuet.html
@@ -51,7 +51,7 @@
             1 year of College Level Programming
           </li>
           <li>
-            Python, Javascript, HTML/CSS
+            Python, Javascript, HTML/CSS, C++, MySQL
           </li>
         </ul>
         Other skills
