resolve minor merge issue

--- a/lab3/index.html
+++ b/lab3/index.html
@@ -33,7 +33,7 @@
         <p>A drawing application that allows users to use any surface as a drawing tablet.</p>
       </article>
 
-      <div id="example2">
+      <article id="example2">
         <img src="images/shuttle.png" alt="Mock Up" style="height: 30%; margin-top: 20%; margin-bottom: 10%;">
         <h1>Flutter ShuttleTracker</h1>
         <p>Mobile RPI ShuttleTracker Application</p>
