changed div to address tag

--- a/lab3/index.html
+++ b/lab3/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-  <div id="homepage">
+  <article id="homepage">
 
     <section class="header">
       <h1>We are Content Creators.</h1>
@@ -20,13 +20,11 @@
     <div class="topPhrase">
       <p>WORKS</p>
     </div>
-
     <div class="bottomPhrase">
       <p>Portfolio</p>
     </div>
 
     <section class="examples">
-
       <article id="example1">
         <img src="images/openTabl.jpeg" alt="Mock Up" style="height: 30%; margin-top: 20%; margin-bottom: 10%;">
         <h1>Open Tablet</h1>
@@ -45,61 +43,54 @@
         <h3>Find peers who share your interests.</h3>
         <p>A Social Media Web Application</p>
       </article>
-
     </section>
 
     <div class="topPhrase">
       <p>TEAM</p>
     </div>
-
     <div class="bottomPhrase">
       <p>Profiles</p>
     </div>
 
     <section class="profiles">
-      
-      <div id="profile1">
+      <article id="profile1">
         <a href="resumes/lid.html">
           <img src="images/Derek.jpeg" alt="Mock Up">
           <h3>Derek Li</h3>
           <p>Software Engineer</p>
           <p>Mobile Developer</p>
           <p>Web Developer</p>
-        </a>
-      </div>
+        </article>
+      </section>
 
-      <div id="profile2">
+      <article id="profile2">
         <a href="resumes/wildg.html">
           <img src="images/wildg.jpg" alt="Mock Up">
           <h3>Gabriel Wild</h3>
           <p>Software Engineer</p>
           <p>Web Developer</p>
         </a>
-      </div>
+      </article>
 
-      <div id="profile3">
+      <article id="profile3">
         <a href="resumes/qinz.html">
           <img src="images/Kyle.jpg" alt="Mock Up">
           <h3>Kyle Qin</h3>
-          <p>
-            Software Engineer
-          </p>
-          <p>
-            Web Developer
-          </p>
+          <p>Software Engineer</p>
+          <p>Web Developer</p>
         </a>
-      </div>
+      </article>
 
-      <div id="profile4">
+      <article id="profile4">
         <a href="resumes/samuet.html">
           <img src="images/Tyler.jpg" alt="Mock Up">
           <h3>Tyler Samuels</h3>
           <p>Software Engineer</p>
           <p>Web Developer</p>
         </a>
-      </div>
+      </article>
 
-      <div id="profile5">
+      <article id="profile5">
         <a href="resumes/barnev.html">
           <img src="images/Virginia.jpg" alt="Mock Up">
           <h3>Virginia Barnes</h3>
@@ -107,11 +98,10 @@
           <p>Web Developer</p>
           <p>Project Management</p>
         </a>
-      </div>
-
+      </article>
 
     </section>
-  </div>
+  </article>
 
 </body>
 
