--- a/lab3/resumes/barnev.html
+++ b/lab3/resumes/barnev.html
@@ -15,7 +15,7 @@
     <div class="org">Content Creators</div>
     <a class="email" href="mailto:virginiabarnes0825@gmail.com">virginiabarnes0825@gmail.com</a>
 
-    <div class="adr">
+    <address class="adr">
       <div class="street-address">24 Pleasant Street</div>
       <span class="locality">Tewksbury</span>
       ,
@@ -24,8 +24,7 @@
       <span class="postal-code">01876</span>
       ,
       <span class="country-name">United States</span>
-
-    </div>
+    </address>
     <div class="tel">(978) 973 - 5880</div>
   </div>
   </ul>
