--- a/lab3/resumes/lid.html
+++ b/lab3/resumes/lid.html
@@ -15,7 +15,7 @@
     <div class="org">Content Creators</div>
     <a class="email" href="mailto:derekli2011@gmail.com">derekli2011@gmail.com</a>
 
-    <div class="adr">
+    <address class="adr">
       <div class="street-address">13802 SW 39th ST</div>
       <span class="locality">Davie</span>
       ,
@@ -24,8 +24,7 @@
       <span class="postal-code">33330</span>
       ,
       <span class="country-name">United States</span>
-
-    </div>
+    </address>
     <div class="tel">(954) 864 - 1487</div>
   </div>
   </ul>
