--- a/lab3/resumes/qinz.html
+++ b/lab3/resumes/qinz.html
@@ -15,7 +15,7 @@
     <div class="org">Content Creators</div>
     <a class="email" href="mailto:qinnkkyle@gmail.com">qinnkkyle@gmail.com</a>
 
-    <div class="adr">
+    <address class="adr">
       <div class="street-address">284 Pawling Ave.</div>
       <span class="locality">Troy</span>
       ,
@@ -24,8 +24,7 @@
       <span class="postal-code">12180</span>
       ,
       <span class="country-name">United States</span>
-
-    </div>
+    </address>
     <div class="tel">(838) 200 - 3104</div>
   </div>
   </ul>
