--- a/lab3/resumes/samuet.html
+++ b/lab3/resumes/samuet.html
@@ -15,7 +15,7 @@
     <div class="org">Content Creators</div>
     <a class="email" href="mailto:tjs1036@gmail.com">tjs1036@gmail.com</a>
 
-    <div class="adr">
+    <address class="adr">
       <div class="street-address">205 Sudbrook Ln.</div>
       <span class="locality">Pikesville</span>
       ,
@@ -24,8 +24,7 @@
       <span class="postal-code">21208</span>
       ,
       <span class="country-name">United States</span>
-
-    </div>
+    </address>
     <div class="tel">(443) 608 - 4907</div>
   </div>
   </ul>
