--- a/lab3/resumes/wildg.html
+++ b/lab3/resumes/wildg.html
@@ -15,7 +15,7 @@
     <div class="org">Content Creators</div>
     <a class="email" href="mailto:gabewild37@gmail.com">gabewild37@gmail.com</a>
 
-    <div class="adr">
+    <address class="adr">
       <div class="street-address">2316 Ronda Vista Dr</div>
       <span class="locality">Los Angeles</span>
       ,
@@ -24,8 +24,7 @@
       <span class="postal-code">90027</span>
       ,
       <span class="country-name">United States</span>
-
-    </div>
+    </address>
     <div class="tel">(323) 708 - 9229</div>
   </div>
   </ul>
