readme for index.html

--- a/lab3/index.html
+++ b/lab3/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-  <article id="homepage">
+  <div id="homepage">
 
     <section class="header">
       <h1>We are Content Creators.</h1>
@@ -101,7 +101,7 @@
       </article>
 
     </section>
-  </article>
+  </div>
 
 </body>
 
