changed it back to divs

--- a/lab3/index.html
+++ b/lab3/index.html
@@ -24,26 +24,26 @@
       <p>Portfolio</p>
     </div>
 
-    <section class="examples">
-      <article id="example1">
+    <div class="examples">
+      <div id="example1">
         <img src="images/openTabl.jpeg" alt="Mock Up" style="height: 30%; margin-top: 20%; margin-bottom: 10%;">
         <h1>Open Tablet</h1>
         <p>A drawing application that allows users to use any surface as a drawing tablet.</p>
-      </article>
+      </div>
 
-      <article id="example2">
+      <div id="example2">
         <img src="images/shuttle.png" alt="Mock Up" style="height: 30%; margin-top: 20%; margin-bottom: 10%;">
         <h1>Flutter ShuttleTracker</h1>
         <p>Mobile RPI ShuttleTracker Application</p>
-      </article>
+      </div>
 
-      <article id="example3">
+      <div id="example3">
         <img src="images/region.png" alt="Mock Up" style="height: 30%; margin-top: 20%; margin-bottom: 10%;">
         <h1>Region</h1>
         <h3>Find peers who share your interests.</h3>
         <p>A Social Media Web Application</p>
-      </article>
-    </section>
+      </div>
+    </div>
 
     <div class="topPhrase">
       <p>TEAM</p>
@@ -52,45 +52,49 @@
       <p>Profiles</p>
     </div>
 
-    <section class="profiles">
-      <article id="profile1">
+    <div class="profiles">
+      <div id="profile1">
         <a href="resumes/lid.html">
           <img src="images/Derek.jpeg" alt="Mock Up">
           <h3>Derek Li</h3>
           <p>Software Engineer</p>
           <p>Mobile Developer</p>
           <p>Web Developer</p>
-        </article>
-      </section>
+        </a>
+      </div>
 
-      <article id="profile2">
+      <div id="profile2">
         <a href="resumes/wildg.html">
           <img src="images/wildg.jpg" alt="Mock Up">
           <h3>Gabriel Wild</h3>
           <p>Software Engineer</p>
           <p>Web Developer</p>
         </a>
-      </article>
+      </div>
 
-      <article id="profile3">
+      <div id="profile3">
         <a href="resumes/qinz.html">
           <img src="images/Kyle.jpg" alt="Mock Up">
           <h3>Kyle Qin</h3>
-          <p>Software Engineer</p>
-          <p>Web Developer</p>
+          <p>
+            Software Engineer
+          </p>
+          <p>
+            Web Developer
+          </p>
         </a>
-      </article>
+      </div>
 
-      <article id="profile4">
+      <div id="profile4">
         <a href="resumes/samuet.html">
           <img src="images/Tyler.jpg" alt="Mock Up">
           <h3>Tyler Samuels</h3>
           <p>Software Engineer</p>
           <p>Web Developer</p>
         </a>
-      </article>
+      </div>
 
-      <article id="profile5">
+      <div id="profile5">
         <a href="resumes/barnev.html">
           <img src="images/Virginia.jpg" alt="Mock Up">
           <h3>Virginia Barnes</h3>
@@ -98,10 +102,9 @@
           <p>Web Developer</p>
           <p>Project Management</p>
         </a>
-      </article>
-    </section>
+      </div>
+    </div>
+
   </div>
-
 </body>
-
 </html>
