updated html file name, created script link in html created lab4.css

--- a/lab4/lab4.html
+++ b/lab4/lab4.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <title>Lab 4</title>
-  <link rel=stylesheet href="lab4Solution.css"/>
+  <link rel=stylesheet href="lab4.css"/>
+  <script type="text/javascript" src="lab4.js"></script>
 </head>
 <body>
   <h1>Lab #4 - JavaScript and the Document Object Model</h1>
