1st iteration User Profile Page

--- a/JamSesh/homepage.html
+++ b/JamSesh/homepage.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/Homepage-Nav.css">
-    <link rel="stylesheet" href="assets/css/custom.css">
+    <link rel="stylesheet" href="assets/css/Homepage.css">
 </head>
 
 <body>
